src/test/ui/invalid/invalid-plugin-attr.stderr
warning: use of deprecated attribute `plugin`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: unused attribute
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/invalid-plugin-attr.rs:1:9
   |
LL | #![deny(unused_attributes)]
   |         ^^^^^^^^^^^^^^^^^

error: crate-level attribute should be an inner attribute: add an exclamation mark: `#![foo]`
  --> $DIR/invalid-plugin-attr.rs:4:1
   |
LL | #[plugin(bla)]
   | ^^^^^^^^^^^^^^

error: aborting due to 2 previous errors; 1 warning emitted

